refactor(services): use java 25 Math.clamp for limit safe-cap in business endpoints